# docxy

./: .gitignore  Cargo.toml  LICENSE  README.md  README_AR.md  README_CN.md  README_EN.md  README_ES.md  README_KR.md  README_RU.md  README_TR.md  install.sh
.github/workflows/: release.yml
config/: default.toml
src/: auth_utils.rs  config.rs  error.rs  main.rs
src/handlers/: auth.rs  health.rs  misc.rs  mod.rs  proxy.rs
