[package]
name = "docxy"
version = "0.5.5"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20"
rustls-pemfile = "1.0"
lazy_static = "1.4.0"
log = "0.4"
chrono = "0.4"
